workspace = { members = [ "api", "entity","service"] }

[package]
name = "solana-checker-token-ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpl-token-metadata = "4.1.1"
solana-client = "1.18.4"
solana-sdk = "1.18.4"
spl-token = "4.0.0"
serde = "1.0.197"
serde_json = "1.0.114"
dotenv = "0.15.0"