workspace = { members = [".", "api", "entity", "respository", "service", "utils"] }

[package]
name = "solana-checker-token-ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpl-token-metadata = "4.1.2"
solana-client = "1.18.7"
solana-sdk = "1.18.7"
spl-token = "4.0.0"
serde = "1.0.197"
serde_json = "1.0.114"
dotenv = "0.15.0"
reqwest = "0.11.25"
tokio = { version = "1.36.0", features = ["full", "test-util"] }
log = "0.4.21"
env_logger = "0.11.3"
futures = "0.3.28"
