[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
utils = { path = "../utils" }
reqwest = "0.11.25"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full", "test-util"] }
mpl-token-metadata = "4.1.2"
solana-client = "1.18.7"
solana-sdk = "1.18.7"
spl-token = "4.0.0"
spl-token-2022 = "2.0.2"
serde = "1.0.197"
